[package]
name = "pacmap-rs-example"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Griffith <joshua@beamform.io>"]
description = "A simple example demonstrating how to use PaCMAP dimensionality reduction in Rust"
repository = "https://github.com/beamform/pacmap-rs-example"
license = "Apache-2.0"
keywords = ["embedding", "dimension-reduction", "pacmap", "algorithms"]
categories = ["science", "algorithms", "mathematics"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
mimalloc = "0.1"
ndarray = "0.16"
ndarray-npy = "0.9"
plotly = { version = "0.10", features = ["plotly_ndarray"] }
reqwest = { version = "0.12", features = ["blocking"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# macOS: Use native Accelerate Framework
[target.'cfg(target_os = "macos")'.dependencies]
pacmap = "0.1"

# Windows: Use Intel MKL (more reliable on Windows)
[target.'cfg(target_os = "windows")'.dependencies]
pacmap = { version = "0.1", features = ["intel-mkl-system"] }

# Linux: Use OpenBLAS
[target.'cfg(target_os = "linux")'.dependencies]
pacmap = { version = "0.1", features = ["openblas-system"] }

[profile.release]
codegen-units = 1
lto = "fat"
